src/components/Grid.css
.grid {
  display: grid;
  /* grid-template-columns: repeat(auto-fill, 2em); */
  grid-template-columns: repeat(53, minmax(1em, 1fr));
  /* grid-template-rows: repeat(90, 1fr); */
  /* remove justify-items: center; to make background color to fill all item */
  /* justify-items: center; */
  gap: .3em;
  perspective: 300px;
}

.grid > .grid-item {
  height: 2rem;

  animation: flipin 1s linear;
}

@keyframes flipin {
  0% {
    transform: translateZ(-300px) rotateY(90deg);
    backface-visibility: hidden;
  }
  60% {
    transform: translateZ(-100px) rotateY(60deg);
  }
  100% {
    transform: translateZ(0px) rotateY(0deg);
  }
}

